add latest query param
